resolve string injections